ugchart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-service
spec:
  selector:
    app: chatbot

  ports:
    - name: app
      protocol: TCP
      port: 5000
      targetPort: 5000
  type: NodePort
